# ai-trading-agents

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/instructions/: instructions.md
scripts/: generate_pitch_deck.py
src/: README.md  info_scheduler.py  main.py
src/agent/: README.md  __init__.py  event_signal.py  llm_signal.py  momentum_signal.py  news_signal.py  portfolio.py  risk.py  signals.py  strategy.py  volume_breakout_signal.py
src/detection/: README.md  __init__.py  event_detection.py  event_detection_postgres.py  event_detection_service.py  event_types.py
src/execution/: README.md  __init__.py  kraken_cli.py  orders.py
src/identity/: README.md  __init__.py  erc8004_registry.py  reputation.py
src/ingestion/: README.md  __init__.py  prices_config.py  prices_ingestion.py  rss_config.py  rss_ingestion.py
tests/: storage_fakes.py  test_agent_risk.py  test_agent_signals.py  test_agent_strategy.py  test_event_detection.py  test_event_signal.py  test_execution_orders.py  test_identity_registry.py  test_identity_reputation.py  test_info_scheduler.py  test_kraken_cli.py  test_llm_signal.py  test_main_dry_run.py  test_momentum_signal.py  test_monitoring_audit_log.py  test_monitoring_calibration.py  test_monitoring_drawdown.py  test_monitoring_learning.py  test_monitoring_pnl.py  test_monitoring_trade_journal.py  test_news_signal.py  test_prices_ingestion.py  test_validation_artifacts.py  test_validation_checkpoints.py  test_volume_breakout_signal.py
(+20 files in other folders)
