[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-system"
version = "0.1.0"
description = "event based AI trading system on Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10,<4.0",
    "boto3>=1.35,<2.0",
    "eth-account>=0.13,<0.14",
    "feedparser>=6.0,<7.0",
    "psycopg[binary]>=3.2,<4.0",
    "requests>=2.31,<3.0",
    "streamlit>=1.44,<2.0",
    "streamlit-autorefresh>=1.0,<2.0",
    "web3>=7.8,<8.0",
]

[project.scripts]
kraken-cli = "execution.kraken_cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "feedparser"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["eth_account", "eth_account.*", "web3", "web3.*"]
ignore_missing_imports = true
